# langfuse-trial

./: .env.template  .gitignore  pyproject.toml
langfuse_trial/: main.py
scripts/: setup_langfuse.ps1
